# mandelbrot

./: .gitignore
src/: CMakeLists.txt  main.c  mandelbrot.c  mandelbrot.h  mutil.c  mutil.h  mymacro.h  nrdef.h  nrutil.c  nrutil.h  pi.c  pi.h  simd_macro.h  vnrdef.h  vnrutil.c  vnrutil.h
